--- a/game.css
+++ b/game.css
@@ -51,3 +51,30 @@ body{
 #reset-btn:hover {
   background-color: #555;
 }
+#new-btn{
+        margin-top: 20px;
+  padding: 10px 20px;
+  font-size: 1.2rem;
+  background-color: #333;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+#mag {
+      color:#ffffc7;
+      font-size:8vmin;
+}
+.msg-container{
+     height:100vmin;
+
+     display:flex;
+     align-items: center;
+     justify-content:center;
+flex-direction: column;
+gap:4rem;
+}
+.hide{
+      display:none ;
+}
